add two command line 1 & 2

--- a/git_commands.html
+++ b/git_commands.html
@@ -26,6 +26,8 @@
   <p>test</p>
     <h3>Git Commands</h3>
     <ul>
+	 <li><b class="code"> mkdr: </b> Make Directory</li>
+	 <li><b class="code"> cd <...> </b> select Directory</li>
         <li><b class="code">git init: </b>Git initilizing on Current Directory</li>
         <li><b class="code">git status: </b>show modified,Untrackted and Staged Files </li>
         <li><b class="code">git add: </b>Add Untrackted Or Modified File to <b>Stage</b></li>
@@ -109,6 +111,7 @@
 		<li><b>Note:</b> You must test your code every time you use bisect then use good or bad after git bisect !</li>
 
     </ul>
+	
 </body>
 
 </html>
