--- a/git_commands.html
+++ b/git_commands.html
@@ -26,9 +26,12 @@
   <p>test</p>
     <h3>Git Commands</h3>
     <ul>
-	      <li><b class="code">mkdr </b>make directory</li>
+	      <li><b class="code">mkdr </b>make  new directory for start project</li>
+	     
+	    
         <li><b class="code">git init: </b>Git initilizing on Current Directory</li>
         <li><b class="code">git status: </b>show modified,Untrackted and Staged Files </li>
+	     <li><b class="code">git init: </b>Git initilizing on Current Directory</li>
         <li><b class="code">git add: </b>Add Untrackted Or Modified File to <b>Stage</b></li>
         <li><b class="code">git commit:</b> Commit Staged File and remove them from stage. after commit all stages new
             place that we
