correct command  in line 29
adding mkdir replace mkdr

--- a/git_commands.html
+++ b/git_commands.html
@@ -26,7 +26,7 @@
   <p>test</p>
     <h3>Git Commands</h3>
     <ul>
-	      <li><b class="code">mkdr </b>make  new directory for start project</li>
+	      <li><b class="code">mkdir </b>make  new directory for start project</li>
 	     
 	    
         <li><b class="code">git init: </b>Git initilizing on Current Directory</li>
