adding one command about select editor

--- a/git_commands.html
+++ b/git_commands.html
@@ -27,6 +27,7 @@
     <h3>Git Commands</h3>
     <ul>
 	      <li><b class="code">mkdir </b>make  new directory for start project</li>
+	    <li><b class="code">git config --global core.editor <....> </b>select editor</li>
 	     
 	    
         <li><b class="code">git init: </b>Git initilizing on Current Directory</li>
